--- a/website.css
+++ b/website.css
@@ -413,7 +413,7 @@ footer{
     margin-right: auto;
 }
 .feature_title_container{
-    width: 300px;
+    width: 480px;
     margin-left: 50px;
     padding-top: 50px;
 }
@@ -421,7 +421,7 @@ footer{
     width: 200px;
 }
 .feature_blog_post_title{
-    font-size: 65px;
+    font-size: 50px;
     color: black;
     text-transform: uppercase;
     font-weight: 100;
@@ -946,6 +946,12 @@ footer{
     .post_body{
         width: 520px;
     }
+    .feature_title_container{
+        width: 380px;
+    }
+    .feature_blog_post_title {
+        font-size: 40px;
+    }
 }
 @media screen and (max-width:550px){
     #lander_greeting2_new{
@@ -965,6 +971,12 @@ footer{
     }
     .post_body{
         width: 450px;
+    }
+    .feature_title_container{
+        width: 300px;
+    }
+    .feature_blog_post_title {
+        font-size: 40px;
     }
 }
 @media screen and (max-width:500px){
@@ -994,8 +1006,8 @@ footer{
         margin-left: 5px;
         margin-right: 5px;
     }
-    .feature_blog_post_title{
-        font-size: 45px;
+    .feature_blog_post_title {
+        font-size: 30px;
     }
     .feature_post{
         height: 350px;
