--- a/website.css
+++ b/website.css
@@ -6,6 +6,7 @@
 body{
 	margin: 0px;
     background: #f8f8f8;
+    -webkit-font-smoothing: antialiased;
 }
 h1{
     font-family: 'Dharma', sans-serif;
