--- a/website.css
+++ b/website.css
@@ -331,11 +331,12 @@ footer{
 	margin-right: auto;
 }
 #project_name_text{
-	margin-bottom: 30px;
-	margin-top: 0px;
-    font-size: 125px;
+    margin-bottom: 0;
+    margin-top: 0px;
+    font-size: 115px;
     text-shadow: none;
     letter-spacing: 3px;
+    font-style: normal;
 }
 #long_project_name_text{
 	font-size: 65px;
@@ -409,11 +410,14 @@ footer{
 }
 .old_posts_container{
     width: 700px;
+    justify-content: space-between;
     display: flex;
     flex-wrap: wrap;
 }
 .fill_space{
-    flex-grow: 2;
+    width: 100%;
+    height: 300px;
+    margin-top: 20px;
 }
 .welcome_container{
 	margin-left: auto;
@@ -438,15 +442,12 @@ footer{
 }
 #floppy-bg{
     background: url('imgs/floppy-disk-background.png');
+    font-weight: bolder;
+    border-radius: 0 0 120px 0;
 }
 .non_feature_post{
-    flex-basis: 340px;
+   width: 340px;
     height: 300px;
-    display: inline-block;
-    text-align: left;
-    vertical-align: top;
-    position: relative;
-    flex-grow: 1;
 }
 .feature_post{
     width: 100%;
@@ -577,6 +578,7 @@ footer{
 }
 #mistakes_bg{
     background-image: url(imgs/mistakes-bg.png);
+    border-radius: 130px 0 0; 
 }
 /*-------------------------------------- END BLOG --------------------------------------*/
 
@@ -780,16 +782,17 @@ footer{
 }
 #email_me_button{
     font-size: 16px;
+    font-weight: bolder;
     background-color: #3FAFEC;
     padding: 12px 15px 15px 15px;
     border-radius: 5px;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     border: none;
     text-transform: uppercase;
     text-decoration: none;
     -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);  
+    box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
 }
 #reach_out_footer{
     background: #1d1d1d;
