adding fun colors to homepage links

--- a/website.css
+++ b/website.css
@@ -246,6 +246,14 @@ footer{
     margin: 0px;
     display: inline-block;
 }
+.orange_text{
+    color: rgb(245,134,30);
+    font-weight: bold;
+}
+.magenta_text{
+    color: #C2185B;
+    font-weight: bold;
+}
 .proj1{
     background-color: #00838F;
 }
