--- a/website.css
+++ b/website.css
@@ -291,6 +291,7 @@ footer{
 }
 #portfolio_container_new p{
     letter-spacing: 3px;
+    font-weight: bold;
 }
 .lander_container_new{
     width: 100%;
@@ -815,18 +816,17 @@ footer{
     text-align: left;
 }
 #reach_out_text h2{
-    letter-spacing: 6px;
+    letter-spacing: 2px;
     font-size: 40px;
-    border-left: 2px solid #f8f8f8;
     width: 500px;
+    margin-bottom: 10px;
     text-align: left;
-    padding-left: 20px;
     margin-top: 0;
     text-transform: uppercase;
 }
 #reach_out_text a{
-    color: #f8f8f8;
-    border-bottom: 1px solid #f8f8f8;
+    color: #C2185B;
+    text-decoration: none;
 }
 
 
