--- a/website.css
+++ b/website.css
@@ -3,9 +3,24 @@
 	font-family: 'Dharma';
 	src: url('imgs/DharmaGothicE_Bold_R.otf');
 }
+@font-face { 
+    font-family: 'Brandon-light';
+    src: url('fonts/Brandon_light.otf');
+}
+@font-face { 
+    font-family: 'Brandon-regular';
+    src: url('fonts/Brandon_regular.otf');
+}
+@font-face { 
+    font-family: 'Brandon-medium';
+    src: url('fonts/Brandon_medium.otf');
+}
+@font-face { 
+    font-family: 'Brandon-bold';
+    src: url('fonts/Brandon_bold.otf');
+}
 body{
 	margin: 0px;
-    background: #f8f8f8;
     -webkit-font-smoothing: antialiased;
 }
 h1{
@@ -16,9 +31,9 @@ h1{
     text-shadow: 2px 2px #03A9F4;
 }
 h2{
-    font-family: 'Dharma', sans-serif;
-    font-size: 35px;
-    letter-spacing: 3px;
+    font-family: "Brandon-bold", Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    letter-spacing: 1.67px;
 }
 h3{
     font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
@@ -27,24 +42,28 @@ h3{
     font-weight: lighter;
 }
 h4{
-	font-family: 'Dharma';
-	font-size: 36px;
-	margin-bottom: 10px;
+	font-family: "Brandon-light", Arial, Helvetica, sans-serif;
+	font-size: 10px;
+	letter-spacing: 4px;
 	text-transform: uppercase;
 }
 p{
-    font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
-    font-size: 18px;
-    letter-spacing: 1.5px;
-    line-height: 24px;
+    font-family: "Brandon-regular", Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    letter-spacing: -0.23px;
+    line-height: 20px;
+    color: #4A4A4A;
 }
 a{
-	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	font-family: "Brandon-regular", Arial, Helvetica, sans-serif;
 	text-decoration: none;
 	color: black;
 }
 a:hover{
     cursor: pointer;
+}
+strong{
+    font-family: "Brandon-bold", Arial, Helvetica, sans-serif;
 }
 .underline_link{
 	border-bottom: 1px solid black;
@@ -205,6 +224,406 @@ footer{
 .white-font{
     color: white;
 }
+
+
+
+
+.box_nav_container{
+    width: 100%;
+    display: flex;
+    height: 84px;
+    background-color: white;
+}
+@media screen and (max-width:800px){
+    .box_nav_container{
+        display: none;
+    }
+}
+.box_nav_container_mobile{
+    display: none;
+}
+@media screen and (max-width:800px){
+    .box_nav_container_mobile{
+        display: flex;
+        width: 100%;
+        border-bottom: 1px solid #E3E3E3;
+    }
+}
+.mobile_nav_inner{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+.mobile_nav_logo{
+    width: 54px;
+    height: 54px;
+    border-right: 1px solid #E3E3E3;
+    text-align: center;
+}
+.mobile_nav_name{
+    text-align: center;
+    letter-spacing: 3px;
+    display: flex;
+    align-items: center;
+}
+.mobile_nav_hamburger{
+    border-left: 1px solid #E3E3E3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 54px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+.mobile_nav_hamburger div{
+    height: 1px;
+    background-color: #4A4A4A;
+    width: 17px;
+    margin-top: 2.5px;
+    margin-bottom: 2.5px;
+}
+.mobile_nav_logo img{ 
+    width: 21px;
+    height: 21px;
+    margin-top: 16.5px;
+    margin-bottom: 16.5px;
+}
+.mobile_nav_hidden_menu{
+    display: none;
+    width: 100%;
+}
+.hidden_menu_inner{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.mobile_inner_links_container{
+    width: 100%;
+    border-left: 1px solid #E3E3E3;
+}
+.mobile_page_link{
+    width: 100%;
+}
+.mobile_page_link .mobile_link_text{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #E3E3E3;
+    margin: 0;
+    padding-left: 20px;
+}
+.mobile_page_link:last-child .mobile_link_text{
+    border-bottom: none;
+}
+.right_nav_items{
+    width: 100%;
+}
+.logo_container{
+    width: 131px;
+    border-bottom: 1px solid #E3E3E3;
+    border-right: 1px solid #E3E3E3;
+}
+.logo_container img{
+    width: 38px;
+    height: 38px;
+    margin-left: 47px;
+    margin-right: 47px;
+    margin-top: 23px;
+    margin-bottom: 23px;
+}
+.my_meta_info_container{
+    width: 100%;
+    border-bottom: 1px solid #E3E3E3;
+    text-align: right;
+    height: 37px;
+    font-size: 12px;
+}
+.my_meta_info_container .header_info{
+    margin-left: 15px;
+    margin-right: 15px;
+    letter-spacing: 3px;
+    font-size: 10px;
+}
+.meta_info_inner{
+    width: 610px;
+    height: 37px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: auto;
+}
+.name{
+    font-size: 10px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+.header_email{
+    text-decoration: none;
+}
+.page_links_container{
+    display: flex;
+    align-items: flex-start;
+}
+.page_links_container .page_link{
+    width: 16.6667%;
+    height: 46px;
+    text-align: center;
+    border-right: 1px solid #E3E3E3;
+    border-bottom: 1px solid #E3E3E3;
+    position: relative;
+    top: -1px;
+    left: -1px;
+    -webkit-transition: background-color .3s, color .3s;
+    transition: background-color .3s, color .3s;
+}
+.page_links_container .page_link:hover{
+    background-color: #E3E3E3;
+}
+.page_link h4{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.page_links_container a{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #4A4A4A;
+    letter-spacing: 4px;
+    font-size: 10px;
+}
+.column_container{
+    display: flex;
+    flex-direction: column;
+}
+.row_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.side_by_side_portfolio_intro{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+@media screen and (max-width:1030px){
+    .side_by_side_portfolio_intro{
+        flex-direction: column;
+    }
+}
+.category{
+    letter-spacing: 2px;
+    font-size: 12px;
+    color: #4A4A4A;
+    margin-bottom: 0;
+    font-weight: normal;
+}
+.project_name{
+    text-transform: uppercase;
+    color: #4A4A4A;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+#sls_photo_elizabeth{
+    width: 655px;
+    height: 823px;
+}
+@media screen and (max-width:1030px){
+    #sls_photo_elizabeth{
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+        height: auto;
+        margin-bottom: 100px;
+    }
+}
+#sls_poster{
+    margin-top: 165px;
+    width: 695px;
+    -webkit-box-shadow: 0px 0px 25px 0px rgba(121,121,121,1);
+    -moz-box-shadow: 0px 0px 25px 0px rgba(121,121,121,1);
+    box-shadow: 0px 0px 25px 0px rgba(121,121,121,1);
+}
+@media screen and (max-width:1030px){
+    #sls_poster{
+        width: 90%;
+        height: auto;
+        margin-top: 100px;
+    }
+}
+.title_description_container{
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 90px;
+}
+@media screen and (max-width:1030px){
+    .title_description_container{
+        width: 70%;
+        margin-bottom: 90px;
+    }
+}
+.title_description_container_left{
+    width: 350px;
+    margin-left: 90px;
+    margin-top: 90px;
+    margin-bottom: 90px;
+}
+@media screen and (max-width:1030px){
+    .title_description_container_left{
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+.project_attribute p{
+    margin-top: 0;
+}
+.two_col_grid{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.two_col_grid .row{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+}
+@media screen and (max-width:950px){
+    .two_col_grid .row{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+.magazine_image{
+    width: 450px;
+    height: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    -webkit-box-shadow: 0px 0px 25px 0px rgb(216,216,216);
+    -moz-box-shadow: 0px 0px 25px 0px rgb(216,216,216);
+    box-shadow: 0px 0px 25px 0px rgb(216,216,216);
+}
+@media screen and (max-width:950px){
+    .magazine_image{
+        width: 80%;
+    }
+}
+#ellevest-macbook{
+    width: 770px;
+    height: 100%;
+    margin-top: 90px;
+    margin-left: auto;
+}
+@media screen and (max-width:1030px){
+    #ellevest-macbook{
+        margin-top: 0;
+        margin-bottom: 90px;
+        width: 80%;
+    }
+}
+.project_description{
+    margin-left: 90px;
+    width: 650px;
+    text-align: left;
+}
+@media screen and (max-width:1030px){
+    .project_description{
+        width: 310px;
+        margin-left: 40px;
+    }
+}
+.project_image{
+    width: 75%;
+    height: 100%;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+#me_photo{
+    width: 70%;
+    height: 100%;
+}
+@media screen and (max-width:1030px){
+    #me_photo{
+        width: 90%;
+        margin-bottom: 90px;
+    }
+}
+#about_footer{
+    margin-top: 0;
+}
+@media screen and (max-width:950px){
+    #wresq_screenshot{
+        width: 100%;
+    }
+} 
+.portfolio_dropdown{
+    display: none;
+}
+.portfolio_dropdown_show{
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+    background-color: #E3E3E3;
+}
+.portfolio_dropdown_page_link_a{
+    width: 20%;
+}
+.portfolio_dropdown_page_link_a:hover{
+    background-color: #c3c3c3;
+}
+.portfolio_dropdown_page_link{
+    text-align: center;
+    position: relative;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    -webkit-transition: background-color .3s, color .3s;
+    transition: background-color .3s, color .3s;
+}
+#instamilligram_photo_desktop{
+    width: 680px;
+    height: 100%;
+    margin-left: auto;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+@media screen and (max-width:1030px){
+    #instamilligram_photo_desktop{
+        display: none;
+    }
+}
+#instamilligram_photo_mobile{
+    display: none;
+    width: 90%;
+    height: 100%;
+    margin-left: auto;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+@media screen and (max-width:1030px){
+    #instamilligram_photo_mobile{
+        display: block;
+        margin-top: 0;
+    }
+}
+.blog_header{
+    margin: 100px;
+    height: 330px;
+    background-image: url('./imgs/blog-header.png');
+    background-size: cover;
+}
+@media screen and (max-width:500px){
+    .blog_header{
+        margin: 30px;
+    }
+}
+.blog_header_title{
+    color: #4A4A4A;
+    font-size: 64px;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
 /*-------------------------------------- END GLOBAL STYLES --------------------------------------*/
 
 
@@ -323,6 +742,7 @@ footer{
     margin-top: 0px;
     width: 410px;
 }
+
 /*-------------------------------------- END LANDER PAGE --------------------------------------*/
 
 
@@ -464,7 +884,6 @@ footer{
 #floppy-bg{
     background: url('imgs/floppy-disk-background.png');
     font-weight: bolder;
-    border-radius: 0 0 120px 0;
 }
 .non_feature_post{
    width: 340px;
@@ -472,32 +891,38 @@ footer{
 }
 .feature_post{
     width: 100%;
-    height: 450px;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    -webkit-box-shadow:0px 0px 35px 0px rgb(191, 191, 191);
+    -moz-box-shadow:0px 0px 35px 0px rgb(191, 191, 191);
+        box-shadow: 0px 0px 35px 0px rgb(191, 191, 191);
 }
-.feature_title_container{
-    width: 480px;
-    margin-left: 50px;
-    padding-top: 50px;
+.feature_image{
+    width: 400px;
+    height: 100%;
+    margin-left: auto;
+    margin-top: 15px;
 }
 .title_container{
     width: 200px;
 }
 .feature_blog_post_title{
-    font-size: 50px;
-    color: white;
-    text-transform: uppercase;
-    font-weight: 100;
-    font-family: 'Dharma';
-    letter-spacing: 2px;
-    font-style: italic;
+    font-size: 25px;
+    color: #4A4A4A;
+    font-family: 'Brandon-regular';
+    letter-spacing: 0px;
+    line-height: 30px;
+    margin-left: 35px;
+    margin-top: 35px;
+    font-weight: bold;
 }
 .non_feature_blog_post_title{
-    font-family: 'Courier';
+    font-family: 'Brandon-regular';
     font-size: 22px;
-    letter-spacing: 2px;
+    letter-spacing: 0px;
 }
 .feature_blog_post_title:hover,.non_feature_blog_post_title:hover{
 	text-decoration: underline;
@@ -599,7 +1024,6 @@ footer{
 }
 #mistakes_bg{
     background-image: url(imgs/mistakes-bg.png);
-    border-radius: 130px 0 0; 
 }
 /*-------------------------------------- END BLOG --------------------------------------*/
 
@@ -843,11 +1267,18 @@ footer{
 
 #LJC_iframe{
     margin-top: 30px;
-    width: 900px;
+    margin-left: 30px;
+    width: 70%;
     height: 1100px;
     outline: none;
     border: none;
     box-shadow: 0 0 25px rgba(0,0,0,.11);
+}
+@media screen and (max-width:950px){
+    #LJC_iframe{
+        width: 80%;
+        margin-left: 40px;
+    }
 }
 
 
@@ -926,7 +1357,6 @@ footer{
 .text_w_wrap{
     margin-left: auto;
     margin-right: auto;
-    display: inline-block;
     text-align: left;
 }
 
