--- a/website.css
+++ b/website.css
@@ -21,7 +21,6 @@
 }
 body{
     margin: 0px;
-    -webkit-font-smoothing: antialiased;
 }
 h1{
     font-family: 'Dharma', sans-serif;
@@ -740,7 +739,7 @@ footer{
     font-size: 50px;
     color: white;
     letter-spacing: 4px;
-    padding: 15px;
+    padding-bottom: 15px;
     display: inline-block;
     margin: 0px;
 }
@@ -1073,6 +1072,12 @@ footer{
     font-size: 50px;
     margin-bottom: 10px;
     color: #4A4A4A;
+}
+@media screen and (max-width:700px){
+    .post_title h2{
+        font-size: 36px;
+        line-height: 43px;
+    }
 }
 .post_title p{
     color: #4A4A4A;
@@ -1558,7 +1563,7 @@ footer{
         width: 450px;
     }
     .lander_img img{
-        width: 520px;
+        width: 100%;
     }
     #reach_out_text{
     width: 350px;
