--- a/website.css
+++ b/website.css
@@ -571,6 +571,7 @@ footer{
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
+        justify-content: space-between;
     }
 }
 .magazine_image{
@@ -1508,7 +1509,7 @@ footer{
     margin-top: 30px;
     margin-left: 30px;
     width: 70%;
-    height: 1100px;
+    height: 700px;
     outline: none;
     border: none;
     -webkit-box-shadow: 0 0 25px rgba(0,0,0,.11);
