--- a/website.css
+++ b/website.css
@@ -340,6 +340,7 @@ footer{
     border-bottom: 1px solid #E3E3E3;
     margin: 0;
     padding-left: 20px;
+    font-family: "Brandon-regular", Arial, Helvetica, sans-serif;
 }
 .mobile_page_link:last-child .mobile_link_text{
     border-bottom: none;
@@ -539,18 +540,7 @@ footer{
 .project_attribute p{
     margin-top: 0;
 }
-.two_col_grid{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-}
-.two_col_grid .row{
+.row{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -563,7 +553,7 @@ footer{
         justify-content: space-around;
 }
 @media screen and (max-width:950px){
-    .two_col_grid .row{
+    .row{
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
@@ -702,6 +692,7 @@ footer{
     padding-left: 20px;
     font-size: 20px;
     cursor: pointer;
+    font-weight: lighter;
 }
 #instamilligram_photo_desktop{
     width: 680px;
