--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -62,6 +62,8 @@ p{
   position: fixed;
   width: 100%;
   padding: 30px 35px;
+  background: #ffffffc2;
+  z-index: 99;
 }
 #nav-inner{
   display: -webkit-box;
