--- a/resources/less/home.less
+++ b/resources/less/home.less
@@ -125,6 +125,7 @@
           flex-wrap: wrap;
       -ms-flex-pack: distribute;
           justify-content: space-around;
+      text-align: center;
     }
   }
   .homepage--skills-list{
